Issue #2856962 by maikelkoopman: make attachments in node more visible

--- a/themes/socialblue/styleguide/kss-assets/base/hero.css
+++ b/themes/socialblue/styleguide/kss-assets/base/hero.css
@@ -86,6 +86,15 @@
   margin-top: 10px;
 }
 
+.hero-footer__cta {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
 .hero-footer-icon {
   fill: white;
   width: 16px;
@@ -194,12 +203,6 @@
     -ms-flex: 0 0 25%;
     flex: 0 0 25%;
     max-width: 25%;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: end;
-    -ms-flex-pack: end;
-    justify-content: flex-end;
   }
 
   .hero-canvas {
