--- a/themes/socialblue/styleguide/kss-assets/css/badges.css
+++ b/themes/socialblue/styleguide/kss-assets/css/badges.css
@@ -6,13 +6,23 @@
   font-weight: 300;
 }
 
+.badge--likes-count,
+.badge--visibility,
 a.badge--comment-count {
   background-color: #e6e6e6;
   color: #4d4d4d;
 }
 
+.badge--likes-count .icon-badge,
+.badge--visibility .icon-badge,
 a.badge--comment-count .icon-badge {
   fill: #4d4d4d;
+}
+
+.badge--likes-count .icon-badge {
+  fill: transparent !important;
+  stroke: #4d4d4d;
+  stroke-width: 15px;
 }
 
 .list-group-item.active > .badge {
