--- a/themes/socialblue/styleguide/kss-assets/css/form-elements.css
+++ b/themes/socialblue/styleguide/kss-assets/css/form-elements.css
@@ -108,3 +108,11 @@ html.js .input-group-addon .glyphicon.glyphicon-spin {
 .control-label {
   font-weight: 300;
 }
+
+.form-wrapper__label {
+  font-weight: 500;
+}
+
+.form-wrapper {
+  border-radius: 9px;
+}
